[gd_scene load_steps=6 format=2]

[ext_resource path="res://Editors/ExporterEditor/ExporterEditor.gd" type="Script" id=1]
[ext_resource path="res://Icons/Add.svg" type="Texture" id=2]
[ext_resource path="res://Icons/MoveUp.svg" type="Texture" id=3]
[ext_resource path="res://Icons/MoveDown.svg" type="Texture" id=4]
[ext_resource path="res://Icons/Remove.svg" type="Texture" id=5]

[node name="ExporterEditor" type="AcceptDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -246.0
margin_bottom = -148.0
popup_exclusive = true
window_title = "Exporter Editor"
resizable = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 762.0
margin_bottom = 22.0

[node name="ExporterOptions" type="OptionButton" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_right = 698.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="DeleteExporterButton" type="Button" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 702.0
margin_right = 730.0
margin_bottom = 22.0
icon = ExtResource( 5 )

[node name="AddExporterButton" type="Button" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 734.0
margin_right = 762.0
margin_bottom = 22.0
icon = ExtResource( 2 )

[node name="Editor" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 26.0
margin_right = 762.0
margin_bottom = 408.0
size_flags_vertical = 3

[node name="ExporterInput" type="LineEdit" parent="VBoxContainer/Editor"]
unique_name_in_owner = true
margin_right = 762.0
margin_bottom = 24.0
placeholder_text = "Exporter Name"
caret_blink = true
caret_blink_speed = 0.5

[node name="PathInput" type="LineEdit" parent="VBoxContainer/Editor"]
unique_name_in_owner = true
margin_top = 28.0
margin_right = 762.0
margin_bottom = 52.0
placeholder_text = "Executable Path"
caret_blink = true
caret_blink_speed = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Editor"]
margin_top = 56.0
margin_right = 762.0
margin_bottom = 78.0

[node name="ArgOptions" type="OptionButton" parent="VBoxContainer/Editor/HBoxContainer"]
unique_name_in_owner = true
margin_right = 698.0
margin_bottom = 22.0
size_flags_horizontal = 3
align = 1

[node name="DeleteArgButton" type="Button" parent="VBoxContainer/Editor/HBoxContainer"]
unique_name_in_owner = true
margin_left = 702.0
margin_right = 730.0
margin_bottom = 22.0
icon = ExtResource( 5 )

[node name="AddArgButton" type="Button" parent="VBoxContainer/Editor/HBoxContainer"]
unique_name_in_owner = true
margin_left = 734.0
margin_right = 762.0
margin_bottom = 22.0
icon = ExtResource( 2 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/Editor"]
margin_top = 82.0
margin_right = 762.0
margin_bottom = 382.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Editor/HBoxContainer2"]
margin_right = 730.0
margin_bottom = 300.0
size_flags_horizontal = 3

[node name="ArgsEditor" type="VBoxContainer" parent="VBoxContainer/Editor/HBoxContainer2/ScrollContainer"]
unique_name_in_owner = true
margin_right = 730.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Editor/HBoxContainer2"]
margin_left = 734.0
margin_right = 762.0
margin_bottom = 300.0
alignment = 1

[node name="UpButton" type="Button" parent="VBoxContainer/Editor/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
margin_top = 126.0
margin_right = 28.0
margin_bottom = 148.0
icon = ExtResource( 3 )

[node name="DownButton" type="Button" parent="VBoxContainer/Editor/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
margin_top = 152.0
margin_right = 28.0
margin_bottom = 174.0
icon = ExtResource( 4 )
